# ufc-fem-kernel

./: .gitignore  AGENTS.md  ARCHITECTURE_SPEC.md  CONTRIBUTING.md  IP_PROTECTION.md  NOTICE  README.md  package-lock.json  package.json
company_seed/kernel/: CMakeLists.txt
company_seed/kernel/src/L0_Global/: FK_GlobalContainer_Def.f90
company_seed/kernel/src/L1_Infra/: FK_IF_Base_DP.f90  FK_IF_Base_Desc.f90
company_seed/kernel/src/L3_Model/: FK_MD_Brg_L2.f90  FK_MD_Mat_Elastic_Def.f90
docs/: 00-快速导航.md  (+3 more)
tests/: AC2D4_AC2D6_Performance_Benchmark.f90  AC2D4_EndToEnd_Test.f90  AC2D4_Input_Parameter_Reference.f90  AC2D4_Usage_Example.f90  AC2D6_BoundaryConditions_Test.f90  AC2D6_Core_Physics_Test.f90  AC2D6_EndToEnd_Test.f90  AC2D6_Master_Test_Driver.f90  AC3D10_Core_Physics_Test.f90  AC3D15_Core_Physics_Test.f90  AC3D20_Core_Physics_Test.f90  AC3D4_Advanced_Physics_Test.f90  AC3D4_Core_Physics_Test.f90  AC3D4_Mass_Matrix_Test.f90  AC3D4_Master_Test_Driver.f90  AC3D6_Core_Physics_Test.f90  AC3D6_EndToEnd_Test.f90  AC3D6_Layer_Chain_Test.f90  AC3D6_Master_Test_Driver.f90  AC3D6_P4_Functions_Test.f90  AC3D6_Usage_Example.f90  AC3D8_Core_Physics_Test.f90  AC3D8_EndToEnd_Test.f90  AC3D8_Master_Test_Driver.f90  AC3D8_Suite_Test.f90  B31OS_Usage_Example.f90  B31PIPE_Usage_Example.f90  CMakeLists.txt  E2E_Cantilever_Beam.f90  HARNESS_Cont_Friction_Coulomb.f90  HARNESS_Cont_NTS_Gap.f90  HARNESS_Cont_Penalty_Force.f90  HARNESS_Elem_C3D8_PatchTest.f90  HARNESS_Elem_FBar_Patch.f90  HARNESS_Elem_FBar_Patch_Runner.f90  HARNESS_Elem_Mass_Lumped.f90  HARNESS_Elem_Shell_Bending.f90  HARNESS_Mat_Elastic_Uniaxial.f90  HARNESS_Mat_Plastic_VonMises.f90  HARNESS_Mat_Thermal_Expansion.f90  (+75 more)
tests/L1_IF/: IF_Base_test.f90  IF_Err_Test.f90  IF_IO_test.f90  IF_Log_test.f90  IF_Mem_Test.f90  IF_Mon_Test.f90  IF_Prec_Test.f90  IF_Reg_Test.f90
tests/L2_NM/: NM_Base_test.f90  NM_Mtx_Test.f90  NM_Solv_Test.f90  NM_TimeInt_test.f90
tests/L3_MD/: MD_Analysis_test.f90  MD_Asm_Test.f90  MD_BC_Test.f90  MD_Constr_Test.f90  MD_Field_test.f90  MD_Int_Test.f90  MD_KW_Test.f90  MD_Mat_Test.f90  MD_Mesh_test.f90  MD_Model_test.f90  MD_Out_Test.f90  MD_Part_test.f90  MD_Sect_Test.f90  MD_WB_Test.f90  test_MD_MatState_snapshot.f90
tests/L4_PH/: PH_Constr_Test.f90  PH_Cont_Test.f90  PH_Elem_Test.f90  PH_Field_test.f90  PH_LBC_Test.f90  PH_Mat_Test.f90
tests/L4_PH/Material/: test_populate_no_global.f90
tests/L5_RT/: RT_Asm_Test.f90  RT_Cont_Test.f90  RT_Elem_Test.f90  RT_LBC_Test.f90  RT_Log_Test.f90  RT_Mat_Test.f90  RT_Out_Test.f90  RT_Solv_Test.f90  RT_Step_Test.f90  RT_WB_Test.f90  test_RT_NLSolver_ArcLen_min.f90  test_RT_RunModel_Ctx_model_def.f90
tests/L6_AP/: AP_Config_test.f90  AP_Job_test.f90  AP_Out_Test.f90  AP_Reg_Test.f90  AP_Solv_Test.f90  AP_UI_test.f90  test_Brg_AP_Job_L5_bridge.f90
tests/build_test/: if_const.mod  if_err_api.mod  if_err_type.mod  if_prec.mod  md_mat_ids.mod  md_mat_types.mod  test_err_api.f90  test_prec.f90
tests/integration/: E2E_C2_01_Cantilever_LinElastic.f90  E2E_C2_01_Cantilever_LinElastic_Integrated.f90  E2E_C2_02_Uniaxial_J2Plastic.f90  E2E_C2_02_Uniaxial_J2Plastic_Integrated.f90  E2E_C2_03_Contact_HertzSlide.f90  E2E_C2_03_Contact_HertzSlide_Integrated.f90  E2E_C2_04_ThermoMech_Coupling.f90  E2E_C2_04_ThermoMech_Coupling_Integrated.f90  E2E_C2_05_Dynamic_Newmark.f90  E2E_C2_05_Dynamic_Newmark_Integrated.f90  E2E_C2_06_NLGeom_NeoHookean.f90  E2E_C2_06_NLGeom_NeoHookean_Integrated.f90  E2E_C2_07_MultiStep_StateTransfer.f90  E2E_C2_07_MultiStep_StateTransfer_Integrated.f90  test_assembly_chain.f90  test_contact_nts_e2e.f90  test_elem_mat_ip_loop.f90
tests/phase6_stubs/: PHASE6_Stub_AP_Brg_L5.f90  PHASE6_Stub_AP_Job_Def.f90  PHASE6_Stub_AP_Job_Mgr.f90  PHASE6_Stub_IF_Base_DP.f90  PHASE6_Stub_MD_Base_ObjModel.f90  PHASE6_Stub_MD_Mat_Def.f90  PHASE6_Stub_MD_Model_Lib_Core.f90  PHASE6_Stub_MD_Step_Proc.f90  PHASE6_Stub_MD_TypeSystem.f90  PHASE6_Stub_RT_Driver_Core.f90  PHASE6_Stub_RT_Drv_Ctx.f90  PHASE6_Stub_RT_Shared_Def.f90  PHASE6_Stub_RT_Solv_Def.f90  PHASE6_Stub_RT_Solv_Nonlin.f90  PHASE6_Stub_RT_Step_Def.f90  PHASE6_Stub_RT_Step_Exec.f90  PHASE6_Stub_RT_Step_WS.f90
tests/samples/: sample_1_simple_part.inp  sample_2_assembly_contact.inp  sample_3_step_static.inp
tests/ufc_core/: test_c3d8_uniaxial.f90  test_cook_membrane_plasticity.f90
(+3544 files in other folders)
